Solved viewport issue on safari mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -34,15 +34,28 @@
 html {
     scroll-behavior: smooth;
     scroll-padding-top: 80px;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    height: 100dvh;
 }
 
 body {
     background-color: var(--color-background);
     color: var(--color-primary);
     margin: 0;
+    padding: 0;
+    overflow: hidden;
+    height: 100dvh;
     overflow-x: hidden;
     overflow-y: auto;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+canvas {
+    display: block;
+    width: 100vw;
+    height: 100dvh;
 }
 
 /* Home Section */
